<resources>
        <string name="add_no"> إلغاء الإعلانات </string>
         <string name="contact_subj"> العنوان </string>
          <string name="contact_msg"> الرسالة </string>
           <string name="contact_msg_hint"> ادخل نص الرسالة </string>
            <string name="contact_subj_hint"> ادخل عنوان الرسالة </string>
    <string name="verses_pre"> سورة </string>
    <string name="verses_ayah_count_pre"> آية </string>
     <string name="verses_ayah_count_small"> آيات </string>
      <string name="verses_activity_search">البحث في السور ...</string>
       <string name="reciters_pre"> القارئ </string>
    <string name="reciters_ayah_count_pre"> آية </string>
      <string name="reciters_activity_search">البحث في القراء ...</string>
    <string name="btn_send_message">Send Message</string>
    <string name="player_verses_pre"> إخترنا لكم سورة  </string>
    <string name="player_listen_pre"> للقارئ  </string>
    <string name="downloader_empty_title">مدير التنزيلات</string>
    <string name="downloader_empty_msg">مدير التزيلات يساعدك على معرفة السور التي يتم تحميلها و كم من الوقت المتبقي لكل سورة حتى تتمكن من الاستماع اليها دون الحاجة الى الانترنت</string>
    <string name="downloads_empty_title">ليس لدي اي سور منزلة بعد</string>
      <string name="downloads_empty_msg">السور المنزلة تساعدك على الاستماع الى السور دون الحاجة الى الاتصال بالنترنت . ارجع هنا لحذف,تعديل , او الاستماع الى السور المنزلة</string>
    <string name="activity_location_found">Location Found</string>
    <string name="action_search">Sarch</string>
    <string name="action_location_found">Location Found</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_help">Help</string>
    <string name="action_check_updates">Check for Updates</string>
    <string name="search_hint">بحث في صحيح مسلم ..</string>
    <string name="hadithNum">حديث #</string>
    <string name="action_settings">الإعدادات</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
     <string name="menu_main">الصفحة الرئيسية</string>
      <string name="menu_read">مشغل القران</string>
       <string name="menu_reciters">قائمة القراء</string>
        <string name="menu_semi">قائمة السور</string>
         <string name="menu_fav">مدير التنزيلات</string>
          <string name="menu_notes">قوائم التشغيل</string>
           <string name="menu_share">شارك</string>
             <string name="menu_settings">الإعدادات</string>
               <string name="menu_exit">الخروج</string>
                <string name="menu_queue">قائمة الإنتظار</string>
                  <string name="menu_downloaded">الملفات المنزلة</string>
      <string name="release_version">إصدار 1.0.0</string>
    <string-array name="nav_drawer_items">
        <item >الصفحة الرئيسية</item>
        <item >مشغل القران</item>
        <item >قائمة القراء</item>
        <item >قائمة السور</item>
       
      
         <item >مدير التنزيلات</item>
         <item >الملفات المنزلة</item>
           <item >قوائم التشغيل</item>
        <item >شارك</item>
         <item >الإعدادات</item>
          <item >الخروج</item>
    </string-array>
    <string name="desc_list_item_icon">Item Icon</string>
<string name="book_name">مشغل القران الكريم</string>
      <string name="exit">الخروج</string>
    <string name="app_name">مشغل القران الكريم</string>
    <string name="app_exit">هل تريد الخروج من البرنامج</string>
    <string name="app_exit_confirm">موافق</string>
     <string name="app_exit_cancle">إلغاء</string>
     <string name="fav">المفضلة</string>
      <string name="chapters_activity_search">البحث في الكتب ...</string>
        <string name="semi_chapters_activity_search">البحث في الأبواب ...</string>
         <string name="share_app_title"> EqraTech.co </string>
     <string name="share_app_message"> قم يتحميل نسختك من برنامج حافظ قران الان </string>
    <string name="chapter"> كتاب </string>
     <string name="chapters"> الكتب </string>
     <string name="semi_chapters"> الأبواب </string>
     <string name="semi_chapter"> باب </string>
     <string name="no"> إلغاء </string>
     <string name="yes"> موافق </string>
     <string name="loading_text"> تحميل </string>
      <string name="share_body">حمل تطبيق مشغل القران الكريم الآن . فانه يتيح لك الاستماع الى القران الكريم بصوت العديد من القراء من دون الحاجة الى الانترنت. </string>
 <string name="fav_add"> تم اضافة الحديث الى المفضلة </string>
 <string name="fav_del"> تم حذف الحديث من المفضلة </string>
  <string name="note_del"> تم حذف الملاحظة بنجاح </string>
  <string name="note_add"> تم اضافة الملاحظة بنجاح </string>
  <string name="fav_title"> مسح </string>
    <string name="note_title"> مسح </string>
  <string name="fav_empty"> لا يوجد أحاديث في المفضله !!  </string>
    <string name="note_empty"> لا يوجد ملاحظات !!   </string>
  <string name="fav_deletion"> هل أنت متأكد أنك تريد حذف الحديث من المفضلة ؟ </string>
  <string name="note_deletion"> هل أنت متأكد أنك تريد حذف الملاحظة ؟ </string>
  <string name="fav_all_deletion"> هل أنت متأكد أنك تريد حذف المفضلة ؟ </string>
  <string name="note_all_deletion"> هل أنت متأكد أنك تريد حذف جميع الملاحظات ؟  </string>
  <string name="fav_all_del"> تم حذف المفضلة بنجاح </string>
   <string name="note_all_del"> تم حذف الملاحظات بنجاح </string>
   <string name="note_sett_title">العنوان ( إختياري )</string>
   <string name="note_sett_content">محتوى الملاحظة</string>
    <string name="note_sett_color">لون الملاحظة</string>
     <string name="note_sett_save">حفظ الملاحظة</string>
  <string name="copy_success"> تم نسخ الحديث بنجاح </string>
  <string name="quick_action_read"> قراءة </string>
  <string name="quick_action_copy"> نسخ </string>
  <string name="quick_action_add_note"> أضف ملاحظة </string>
   <string name="qa_delete_playlist"> حذف </string>
    <string name="qa_delete_verse"> حذف </string>
    <string name="qa_play_playlist"> تشغيل السور </string>
     <string name="qa_rename_playlist"> تعديل الاسم </string>
      <string name="qa_play_verse"> تشغيل السورة </string>
      <string name="qa_share"> مشاركة </string>
       <string name="qa_download"> تحميل السورة </string>
       <string name="qa_add_queue"> اضافة الى قائمة الانتظار </string>
   <string name="qa_add_play_list"> اضافة الى قائمة التشغيل </string>
  <string name="color_picker_ok"> موافق </string>
   <string name="color_picker_cancel"> إلغاء </string>
   <string name="color_picker_title"> إختر اللون </string>
    <string name="setting_font_size"> حجم الخط </string>
   <string name="all_settings"> كل الإعدادات </string>
    <string name="low_light"> إضاءة خافتة </string>
    <string name="hadith_bg_color"> لون خلفية الحديث </string>
     <string name="hadith_font_color"> لون خط الحديث </string>
     <string name="next_semi"> الباب التالي </string>
     <string name="prev_semi"> الباب السابق </string>
        <string name="new_play_list_label"> قائمة القران الكريم </string>
        <string name="play_list_suras"> سور </string>
      <string name="play_list_edit_ok"> موافق </string>
   <string name="play_list_edit_cancel"> إلغاء </string>
   <string name="play_list_edit_title"> إعادة تسمية </string>
    <string name="play_list_new"> قائمة تشغيل جديدة </string>
   <string name="play_list_edit_to"> إلى </string>
   <string name="play_list_remove_title"> حذف </string>
   <string name="play_list_remove"> هل أنت متأكد أنك تريد حذف قائمة التشغيل مع جميع السور الموجودة فيها ؟ </string>
 <string name="no_play_list"> لا يوجد قوائم تشغيل !! </string>
<string name="play_list_title"> قوائم التشغيل </string>
<string name="play_list_verse_exist"> هذه السورة موجودة في القائمة !! </string>
<string name="db_del_list_verse_s"> لقد تم حذف السورة من قائمة التشغيل بنجاح. </string>
<string name="db_del_list_verse_e"> حدث خلل اثناء حذف السورة .  </string>
<string name="db_ins_list_verse_s"> لقد تم اضافة السورة الى قائمة التشغيل بنجاح. </string>
<string name="db_ins_list_verse_e"> حدث خلل اثناء اضافة السورة .  </string>
<string name="play_ins_wait_list_s"> لقد تم اضافة السورة الى قائمة الانتظار بنجاح. </string>
<string name="play_ins_wait_list_e"> هذه السورة موجودة في قائمة الانتظار !!  </string>
<string name="play_remove_wait_list_s"> لقد تم حذف السورة من قائمة الانتظار بنجاح  </string>
<string name="play_remove_wait_list_e"> يوجد سورة واحدة !! لا يمكن حذفها .  </string>
<string name="db_up_list_s"> لقد تم تحديث اسم قائمة التشغيل بنجاح </string>
<string name="db_up_list_e"> حدث خلل اثناء اعادة تسمية قائمة التشغيل  </string>
<string name="db_ins_list_s"> لقد تم اضافة قائمة تشغيل جديدة بنجاح </string>
<string name="db_ins_list_e"> حدث خلل اثناء انشاء قائمة جديد .   </string>
<string name="db_del_list_s"> لقد تم حذف قائمةالتشغيل بنجاح </string>
<string name="db_del_list_e"> حدث خلل اثناء حذف قائمةالتشغيل </string>
<string name="player_error"> حدث خلل اثناء تشغيل السورة !! </string>
<string name="player_error_title"> مشغل القران الكريم </string>
<string name="interent_error"> الاتصال بالانترنت </string>
<string name="interent_error_title"> لا يوجد اتصال بالانترنت !! </string>
<string name="download_error"> هذه السورة يتم تحميلها حاليا !! </string>
<string name="download_exist_pre"> لقد قمت بتحميل سورة  </string>
<string name="download_progress"> تحميل سورة </string>
<string name="download_complete_pre"> لقد تم تحميل سورة </string>
<string name="download_complete_after"> بنجاح </string>
<string name="download_exist_after"> من قبل !!  </string>
<string name="download_start_pre"> تم اضافة سورة  </string>
<string name="download_start_after">  الى قائمة مدير التنزيلات </string>
<string name="download_success"> الاتصال بالانترنت </string>
<string name="downloading_file_error"> حدث خلل اثناء تحميل سورة </string>
<string name="downloading_file_success"> لقد تم بنجاح تحميل سورة </string>
<string name="downloading_file_success_after"> للقارئ </string>
<string name="share_condition"> عليك تحميل هذه السورة لتتمكن من مشاركتها . </string>
  <string name="share_title">مشاركة تطبيق مشغل القران الكريم </string>
<string name="verses_remove"> حذف </string>
<string name="folders_pre"> سور </string>
   <string name="verses_remove_message"> هل أنت متأكد أنك تريد حذف السورة من الجهاز ؟ </string>
 <string name="reciters_remove_message"> هل أنت متأكد أنك تريد حذف جميع السور التي قمت بتحميلها للقارئ  ؟ </string>
  <string name="reciters_remove_message_s"> لقد تم حذف جميع سور القارئ بناجح. </string>
    <string name="reciters_remove_message_e"> لقد حدث خلل اثناء حذف سور القارئ </string>
<string name="setting_language_title"> اللغة المختارة </string>
<string name="setting_general"> الإعدادات العامة </string>
<string name="setting_rate_us"> قم باعطائنا 5 نجوم :) </string>
<string name="setting_apps"> برامجنا الأخرى </string>
<string name="setting_contact"> إتصل بنا </string>
<string name="setting_share"> شارك التطبيق مع الأصدقاء </string>
<string name="setting_about_us"> عن التطبيق </string>
<string name="setting_full_screen_mode"> وضع ملء الشاشة</string>
<string-array name="arr_languages_items">
        <item >العربية</item>
        <item >English ( United States )</item>
    </string-array>
    <string-array name="arr_languages_locals">
        <item >ar</item>
        <item >en</item>
    </string-array>
    <string-array name="arr_languages_ids">
        <item >1</item>
        <item >2</item>
    </string-array>
</resources>