<?xml version="1.0" encoding="utf-8"?>
<ScrollView
 xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
   android:fillViewport="true">

<LinearLayout
    android:id="@+id/text_bg_color_ind"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/main_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="3dp"
        android:paddingRight="5dp"
        android:paddingTop="3dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/setting_general"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/main_theme_color"
            android:textSize="18sp" />

    </RelativeLayout>
    
        <View
            android:id="@+id/hr0"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/font_background_settings_divider" />

    <RelativeLayout
        android:id="@+id/btn_languages"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_selector2"
        android:paddingBottom="7dp"
        android:paddingRight="10dp"
        android:paddingTop="7dp" >

        <TextView
            android:id="@+id/txt_lang_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="right"
            android:text="@string/setting_language_title"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/txt_lang_title"
            android:layout_below="@+id/txt_lang_title"
            android:gravity="right"
            android:text="English ( United States )"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/main_theme_color"
            android:textSize="14sp" />

    </RelativeLayout>

    <View
        android:id="@+id/hr1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/font_background_settings_divider"
        />
    
    <RelativeLayout
        android:id="@+id/btn_full_mode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_selector2"
        android:paddingBottom="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/txt_full_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/cb_full_mode"
            android:gravity="right"
            android:text="@string/setting_full_screen_mode"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

      <ImageView
          android:id="@+id/cb_full_mode"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentRight="true"
          android:src="@drawable/component_style_btn_check_on_focused_holo_dark" />

    </RelativeLayout>

       <View
           android:id="@+id/hr123"
           android:layout_width="fill_parent"
           android:layout_height="3dp"
           android:background="@color/main_theme_color" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="3dp"
        android:paddingRight="5dp"
        android:paddingTop="3dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/setting_about_us"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/main_theme_color"
            android:textSize="18sp" />

    </RelativeLayout>

    

    

    <View
        android:id="@+id/hr3"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/font_background_settings_divider"
        />

<RelativeLayout
    android:id="@+id/btn_rate"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selector2" >

        <TextView
            android:id="@+id/Text_color_font_ind"
            android:layout_width="2dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@color/main_theme_color"
            android:gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="right"
            android:paddingRight="10dp"
            android:text="@string/setting_rate_us"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/ImageView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:src="@drawable/ic_action_important" />

    </RelativeLayout>

    <View
        android:id="@+id/hr3lkjlkj"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/font_background_settings_divider"
        android:paddingTop="3dp" />

    <RelativeLayout
        android:id="@+id/btn_apps"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_selector2" >

        <TextView
            android:id="@+id/Text_color_bg_ind"
            android:layout_width="2dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@color/main_theme_color"
            android:gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/Text_color_bg_ind"
            android:gravity="right"
            android:paddingRight="10dp"
            android:text="@string/setting_apps"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/ImageView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:src="@drawable/ic_action_view_as_grid" />

    </RelativeLayout>

    <View
        android:id="@+id/hr4"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/font_background_settings_divider"
        android:paddingTop="3dp" />

<RelativeLayout
    android:id="@+id/btn_mail"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selector2" >

        <TextView
            android:id="@+id/Text_color_bg_ind3434"
            android:layout_width="2dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@color/main_theme_color"
            android:gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/TextView023434"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/Text_color_bg_ind3434"
            android:gravity="right"
            android:paddingRight="10dp"
            android:text="@string/setting_contact"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/ImageView0223"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:src="@drawable/ic_action_email" />

    </RelativeLayout>
    
  <View
        android:id="@+id/hr44"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/font_background_settings_divider"
        android:paddingTop="3dp" />

<RelativeLayout
    android:id="@+id/btn_share"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selector2" >

        <TextView
            android:id="@+id/Text_color_bg_ind34341"
            android:layout_width="2dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@color/main_theme_color"
            android:gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/TextView0234341"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/Text_color_bg_ind34341"
            android:gravity="right"
            android:paddingRight="10dp"
            android:text="@string/setting_share"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/ImageView022398"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:src="@drawable/ic_action_share" />

    </RelativeLayout>

    <View
        android:id="@+id/dfdfhr4"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/font_background_settings_divider"
        android:paddingTop="3dp" />
    
  

 <RelativeLayout
     android:id="@+id/ly_all_settings"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@color/main_theme_color"
     android:paddingTop="10dp" >

        <TextView
            android:id="@+id/TextView02123e"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="إصدار 1.0.0"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </RelativeLayout>

</LinearLayout>
</ScrollView>